reset curop in repl thread SERVER-837